tags/0.6/src/objects/WikiLink__c.object
<CustomObject>
    <fields>
        <fullName>FromLink__c</fullName>
        <label>FromLink</label>
        <referenceTo>WikiPage__c</referenceTo>
        <relationshipLabel>WikiLinks (FromLink)</relationshipLabel>
        <relationshipName>FromLink</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Wiki Links</relationshipLabel>
        <relationshipName>WikiLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ToLink__c</fullName>
        <label>ToLink</label>
        <referenceTo>WikiPage__c</referenceTo>
        <relationshipLabel>WikiLinks (ToLink)</relationshipLabel>
        <relationshipName>ToLink</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wiki Link</label>
    <nameField>
        <label>WikiLink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WikiLinks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>